fix `pre` overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,8 @@
 body {
     overscroll-behavior: none;
 }
+
+pre {
+    white-space: pre-wrap;
+    word-break: break-word;
+}
